--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"personal-portfolio-unique","version":"1.0.0","description":"Portfolio-orbitting Website","main":"index.html"}
+{"name":"portfolio-orbitting","version":"1.0.0","description":"Portfolio-orbitting Website","main":"index.html"}
